added exception test SSCS-10293